--- a/MemoryMosaic/Pages/LCV/Date Added.razor
+++ b/MemoryMosaic/Pages/LCV/Date Added.razor
@@ -2,7 +2,7 @@
 
 <title>Date Added - MemoryMosaic</title>
 
-<LibraryContentViewer @ref="@lcv" NoItemsText="Your Entire Library, Sorted by Date Added" Where="separate = false" OrderByFields="@(new[] {"date_added", "date_taken"})" PersistentHeader="true">
+<LibraryContentViewer @ref="@lcv" NoItemsText="Your Entire Library, Sorted by Date Added" OrderByFields="@(new[] {"date_added", "date_taken"})" PersistentHeader="true">
 	<AdditionalButtons>
 		<IconTextButton Icon="sort" Text="@(lcv.SortDesc ? "Newest First" : "Oldest First")" OnClick="@UpdateSorting" Style="margin-left: 8px; margin-right: -30px"/>
 	</AdditionalButtons>
