Please God let this finally fix deleting videos in FV while they're still playing

--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
@@ -251,6 +251,7 @@
 
 	public void Rerender() => StateHasChanged();
 	public async Task RerenderAsync() => await InvokeAsync(StateHasChanged);
+	public async Task CleanupVideo() => await JSRuntime.InvokeVoidAsync("cleanupVideo");
 
 	public void Preload(int newIndex)
 	{
