Add button to ImportItemDisplay for adding individual items

--- a/MemoryMosaic/Styles/Components/ItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/ItemDisplay.scss
@@ -49,6 +49,8 @@
 		> select { display: inline; }
 
 		> .starBtn { display: flex !important; }
+		
+		> .addBtn { display: flex !important; }
 
 		> textarea { display: inline !important; }
 	}
