--- a/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
@@ -89,6 +89,8 @@
 	}
 
 	<IconButton Icon="@(Item.Starred ? "star" : "star_outline")" Class="starBtn" Style="@($"display: {(Item.Starred ? "flex" : "none")}")" OnClick="@ToggleStarred"/>
+	
+	<IconButton Icon="library_add" Class="addBtn" Style="display: none" OnClick="@(async () => await Import.AddItem(Item))"/>
 
 	<textarea style="display: @(String.IsNullOrWhiteSpace(Item.Description) ? "none" : "inline")" @bind="@Item.Description" placeholder="Description"></textarea>
 	
