--- a/MemoryMosaic/Styles/Components/ItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/ItemDisplay.scss
@@ -52,6 +52,8 @@
 		
 		> .addBtn { display: flex !important; }
 
+		> .deleteBtn { display: flex !important; }
+
 		> textarea { display: inline !important; }
 	}
 
