Pop up text is now set in AddItems()

--- a/MemoryMosaic/Pages/Import/Import.razor
+++ b/MemoryMosaic/Pages/Import/Import.razor
@@ -162,7 +162,7 @@
 	}
 </main>
 
-<ProgressPopUp @ref="@popUp" Message="@PopUpMessage" FontSize="24" Width="320" Height="300"/>
+<ProgressPopUp @ref="@popUp" Message="" FontSize="24" Width="320" Height="300"/>
 
 @if (importItems.Count > 0)
 {
