--- a/MemoryMosaic/Styles/Components/LibraryContentViewer/LibraryContentViewer.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer/LibraryContentViewer.scss
@@ -69,4 +69,11 @@ main {
 			margin-bottom: 20px;
 		}
 	}
+
+	//https://stackoverflow.com/a/52168170
+	.extra-spacing {
+		content: "";
+		flex: 20 0 200px;
+		@if ($Debug) { outline: 2px solid cyan; }
+	}
 }
