, and . in VideoPlayer now go left/right by 1 second

--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
@@ -288,7 +288,9 @@
 			if (Current.Video)
 			{
 				shortcuts.Add("Space or K", "Play/Pause");
+				shortcuts.Add(",", "Move Left 1 Second");
 				shortcuts.Add("Left", "Move Left 5 Seconds");
+				shortcuts.Add(".", "Move Right 1 Second");
 				shortcuts.Add("Right", "Move Right 5 Seconds");
 				shortcuts.Add("J", "Move Left 10 Seconds");
 				shortcuts.Add("L", "Move Right 10 Seconds");
