Collections covers are now lazy loaded

--- a/MemoryMosaic/Pages/Collections.razor
+++ b/MemoryMosaic/Pages/Collections.razor
@@ -36,7 +36,7 @@
             <div>
                 @if (!String.IsNullOrWhiteSpace(collection.Cover))
                 {
-                    <img src="mm_library/@collection.Cover" alt=""/>
+                    <img src="mm_library/@collection.Cover" alt="" loading="lazy"/>
                 }
             </div>
             
