Fix Memories years not working when that year only has 1 item

--- a/MemoryMosaic/Styles/Pages/LCV/Memories.scss
+++ b/MemoryMosaic/Styles/Pages/LCV/Memories.scss
@@ -13,4 +13,9 @@
 	}
 }
 
-main > .group > .checkbox > span:last-of-type { font-size: 24px !important; }
+main > .group {
+	> .checkbox > span:last-of-type,
+	> span {
+		font-size: 24px !important;
+	}
+}
