Add OpenLayers.Blazor package

--- a/MemoryMosaic/Pages/_Host.cshtml
+++ b/MemoryMosaic/Pages/_Host.cshtml
@@ -11,7 +11,11 @@
     <link href="~/css/Shared.css" rel="stylesheet"/>
     <script src="~/js/MM.js"></script>
     <script src="~/js/VideoPlayer.js"></script>
-    
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/8.1.0/ol.min.css" rel="stylesheet"/>
+    <link href="_content/OpenLayers.Blazor/OpenLayers.Blazor.css" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/8.1.0/dist/ol.min.js"></script>
+
     <link rel="icon" href="MM Icon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"/> @*https://stackoverflow.com/questions/50303454/how-to-use-the-new-material-design-icon-themes-outlined-rounded-two-tone-and*@
 
